<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    tools:context=".MyChoice">

        <ImageView
            android:id="@+id/image_def"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/bag" />

        <TextView
            android:id="@+id/selected_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="#400080"
            android:padding="15dp"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


        <TextView
            android:id="@+id/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#0033cc"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/description1"
            android:textAlignment="center"
            android:textColor="#0033cc"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/icon_call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/call"
                            app:srcCompat="@drawable/icon_call" />
                        <TextView
                            android:id="@+id/call_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#0033cc"
                            android:text="@string/call2" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/website"
                            app:srcCompat="@drawable/icon_website" />
                        <TextView
                            android:id="@+id/web_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#0033cc"
                            android:text="@string/website2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/icon_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/map"
                            app:srcCompat="@drawable/icon_map" />
                        <TextView
                            android:id="@+id/map_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#0033cc"
                            android:text="@string/directions" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/icon_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/share"
                            app:srcCompat="@drawable/icon_share" />
                        <TextView
                            android:id="@+id/share_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#0033cc"
                            android:text="@string/share2" />
                </LinearLayout>










        </LinearLayout>

        </LinearLayout>

</LinearLayout>