<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Directory">

    <TextView
        android:id="@+id/dir_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/police_and_fire_stations_directory_in_cavite"
        android:textAlignment="center"
        android:textColor="#0033cc"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- LinearLayout for FIRST ROW -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#b3e6cc"
            android:elevation="50dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/policeStation"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:contentDescription="@string/embassies"
                    android:src="@drawable/policestation" />

                <TextView
                    android:id="@+id/policeStation_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/police_station"
                    android:textAlignment="center"
                    android:textColor="#400080"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#ccb3ff"
            android:elevation="50dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/fireStation"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:contentDescription="@string/fire_station"
                    android:src="@drawable/f_station"/>

                <TextView
                    android:id="@+id/fireStation_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/fire_station1"
                    android:textAlignment="center"
                    android:textColor="#400080"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>